# hffp

./: Arbitrary.hs  README.md  ch15.hs  hffp.hs  web_crrawl.hs
addition/: Addition.hs  addition.cabal
addition/.stack-work/: stack.sqlite3
addition/.stack-work/ghci/339e2be4/: cabal_macros.h
addition/.stack-work/ghci/da0efd35/: cabal_macros.h
addition/.stack-work/install/x86_64-linux/af4f49f91e3e2d484cf0226ff4f63d8aa9b3f684f1a580ece056ed96064184ba/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-3sO0pyaDdnKog8ljazeSH/: Addition.dyn_hi
addition/.stack-work/install/x86_64-linux/af4f49f91e3e2d484cf0226ff4f63d8aa9b3f684f1a580ece056ed96064184ba/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-Abb9DXx47205IHZyG945D1/: Addition.dyn_hi  Addition.hi
addition/.stack-work/install/x86_64-linux/af4f49f91e3e2d484cf0226ff4f63d8aa9b3f684f1a580ece056ed96064184ba/8.6.5/pkgdb/: addition-0.1.0.0-3sO0pyaDdnKog8ljazeSH.conf  package.cache
hangman/: hangman.cabal
hangman/.stack-work/: stack.sqlite3
hangman/src/: Hangman.hs  Main.hs
hangman/tests/: tests.hs
morse/: morse.cabal
morse/.stack-work/: stack.sqlite3
morse/.stack-work/install/x86_64-linux/af4f49f91e3e2d484cf0226ff4f63d8aa9b3f684f1a580ece056ed96064184ba/8.6.5/pkgdb/: morse-0.1.0.0-4izFe21w5JJ3Y1pzkjhih.conf  package.cache
morse/src/: Main.hs  Morse.hs
morse/tests/: tests.hs
