name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, data/dict.txt

--executable hangman
library
  hs-source-dirs:      src
  --main-is:             Hangman.hs
  exposed-modules:     Hangman
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:  tests
  build-depends:       base
                     , containers
                     , QuickCheck
                     , hspec
                     , hangman
  default-language:    Haskell2010
